fix: content overflow auto instead of scroll

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ a {
 }
 .Content {
   height: calc(100% - 64px);
-  overflow: scroll;
+  overflow: auto;
 }
 p,
 h1,
